# lbe-142x

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build.yml
docs/reverse/: LBE-1425-RE-plan.md  LBE-1425-config-v1.10.md
include/: gnss_view.h  lbe_common.h  lbe_device.h  lbe_model.h  lbe_platform.h  lbe_serial.h  lbe_transport.h  nmea.h  ubx.h
python/: parse_pcapng.py  parse_usb_capture.py  read_nmea.py  test_lbe1425.py  usbmon_live.py
scripts/: clocklog_live.gp  clocklog_plot.gp  sample_clocklog.csv
src/: gnss_view.c  lbe_device.c  lbe_device_linux.c  lbe_device_windows.c  lbe_platform.c  lbe_serial_linux.c  lbe_serial_windows.c  lbe_transport_linux.c  lbe_transport_windows.c  main.c  model_1420.c  model_1421.c  model_mini.c  nmea.c  ubx.c
tests/: test_main.c  test_nmea.c  test_replay.c  test_ubx.c  test_util.h
